--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -1,1 +1,9 @@
+spring.profiles.active=desenv
 
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
